--- a/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
+++ b/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
@@ -1,22 +1,24 @@
 .modal-button{
     width: 100%;
-    height: 40%;
+    height: 35%;
     background: #000000;
     border: 1px solid #00DFA2;
     border-radius: 10px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    justify-items: center;
+    justify-content: center;
 }
 
 .button-image{
-    max-height:100%; 
-    max-width:100%;
+    max-height:80%; 
+    max-width:80%;
 }
 
 .button-name{
+    width: 70%;
+    text-align: center;
     display: block;
     color: white;
-    font-size: 2.5em;
+    font-size: 2em;
 }
