open/close modal-window

--- a/paradise-front/src/Components/ModalWindow/ModalMenu/modalMenu.css
+++ b/paradise-front/src/Components/ModalWindow/ModalMenu/modalMenu.css
@@ -1,5 +1,5 @@
 .modal{
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
@@ -27,7 +27,8 @@
 
 
 .modal.active {
-    background: #1a1a1a96;
+    position: absolute;
+    background: #1a1a1a16;
     display: flex;
     justify-content: right;
     align-items: flex-start;
