--- a/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
+++ b/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
@@ -1,6 +1,7 @@
 .modal-button{
     width: 100%;
-    height: 35%;
+    height: 60px;
+    margin: 10px;
     background: #000000;
     border: 1px solid #00DFA2;
     border-radius: 10px;
