--- a/paradise-front/src/Components/ModalWindow/ModalMenu/modalMenu.css
+++ b/paradise-front/src/Components/ModalWindow/ModalMenu/modalMenu.css
@@ -1,4 +1,6 @@
 .modal{
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -16,7 +18,7 @@
     border-radius: 10px;
     border: 2px solid #00DFA2;
     width: 284px;
-    height: 168px;
+    height: auto;
 
     display: flex;
     flex-direction: column;
@@ -27,7 +29,6 @@
 
 
 .modal.active {
-    position: absolute;
     background: #1a1a1a16;
     display: flex;
     justify-content: right;
