--- a/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
+++ b/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
@@ -1,23 +1,48 @@
 .box{
-    width: 20%;
-    height: 25%;
-    background-color: red;
+    width: 22vw;
+    height: auto;
+    border-radius: 10px;
+    background-color: #1a1a1a26;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+}
+
+.box:hover{
+    background-color: #1a1a1a47;
 }
 
 .video{
-    width: 100%;
+    margin-top: 5px;
+    width: 95%;
     height: 160px;
     min-height: 160px;
     border-radius: 10px;
-    object-fit: fill;
-    object-position: 50% 50%;
+    object-fit: cover;
+    border: 2px solid #1A1A1A;
+    background-color: transparent;
+}
+
+.info{
+    margin-top: 5px;
+    width: 95%;
+    height: auto;
+    display: flex;
+    align-content: center;
 }
 
 .name{
-
+    width: 85%;
+    padding-left: 5px;
+    text-align:left;
+    font-size: 1.2em;
 }
 
 
 .profile{
-
+    border: 2px solid #1A1A1A;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
 }
