--- a/paradise-front/src/Components/ListVideo/listVideo.css
+++ b/paradise-front/src/Components/ListVideo/listVideo.css
@@ -1,11 +1,10 @@
 .list-video{
-    padding-top: 5%;
+    padding-top: 7%;
     width: 100vw;
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    align-content: center;
-    align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     column-gap: 30px;
+    row-gap: 30px;
 }
