--- a/paradise-front/src/Components/NavigationPanel/Search/search.css
+++ b/paradise-front/src/Components/NavigationPanel/Search/search.css
@@ -17,6 +17,7 @@
     outline-style: none;
     font-size: 1.5em;
     vertical-align: center;
+    font-family: 'Caveat', cursive;
 }
 
 .search-button{
