--- a/paradise-front/src/index.css
+++ b/paradise-front/src/index.css
@@ -1,7 +1,11 @@
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
+  padding: 0;
   font-family: 'Caveat', cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
