--- a/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
+++ b/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
@@ -1,6 +1,6 @@
 .box{
     position: relative;
-    width: 100vw;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,6 +11,7 @@
 }
 
 .profile{
+    width: 100%;
     padding: 0;
     margin: 0;
     display: flex;
@@ -20,7 +21,7 @@
 }
 
 .image_fon{
-   width: 100vw;
+   width: 100%;
    height: 60vh;
     object-fit: cover;
 }
