--- a/paradise-front/src/Components/ListVideo/listVideo.css
+++ b/paradise-front/src/Components/ListVideo/listVideo.css
@@ -1,11 +1,14 @@
 .list-video{
+    position: relative;
     padding-top: 7%;
     padding-bottom: 5%;
-    width: 100vw;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 5%;
+    width: 96%;
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    column-gap: 30px;
+    justify-content: space-between;
     row-gap: 30px;
 }
