--- a/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
+++ b/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
@@ -11,6 +11,7 @@
 }
 
 .profile{
+    position: relative;
     width: 100%;
     padding: 0;
     margin: 0;
@@ -22,6 +23,6 @@
 
 .image_fon{
    width: 100%;
-   height: 60vh;
+   height: 65vh;
     object-fit: cover;
 }
