--- a/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
+++ b/paradise-front/src/Components/Canal/ProfileCanal/profileCanal.module.css
@@ -14,15 +14,12 @@
     position: relative;
     width: 100%;
     padding: 0;
-    margin: 0;
+    margin-bottom: 8vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 
-.image_fon{
-   width: 100%;
-   height: 65vh;
-    object-fit: cover;
-}
+
+
