--- a/paradise-front/src/Components/Canal/ProfileInfo/profileInfo.module.css
+++ b/paradise-front/src/Components/Canal/ProfileInfo/profileInfo.module.css
@@ -2,12 +2,15 @@
     position: absolute;
     bottom: 0;
     background: #1A1A1A;
-    border: 2px solid #00DFA2;
+    border-width: 2px 0px;
+    border-style: solid;
+    border-color: #00DFA2;
     width: 100%;
     height: 7vh;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    box-sizing: border-box;
 }
 
 .info{
