--- a/paradise-front/src/Components/AuthWindow/AuthInput/authInput.module.css
+++ b/paradise-front/src/Components/AuthWindow/AuthInput/authInput.module.css
@@ -18,6 +18,7 @@
     width: 100%;
     box-sizing: border-box;
     line-height: 100%;
+    border: 2px solid #1A1A1A;
     height: 80%;
     border-radius: 10px;
     padding-left: 2%;
