--- a/paradise-front/src/Components/AuthWindow/AuthName/authName.module.css
+++ b/paradise-front/src/Components/AuthWindow/AuthName/authName.module.css
@@ -1,6 +1,8 @@
 .name{
     width: 100%;
     height: 10%;
-    font-size: 3.4em;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    font-size: 3.3em;
     text-align: center;
 }
