--- a/paradise-front/src/Components/Video/video.module.css
+++ b/paradise-front/src/Components/Video/video.module.css
@@ -1,6 +1,15 @@
 .box{
+    padding-top: 10vh;
     min-width: 450px;
-    width: 64vw;
-    height: 38vw;
-    margin-left: 3%;
+    width: 100%;
+    height: 90vh;
+
+    display: flex;
+    justify-content: space-around;
+}
+
+.video{
+
+    width: 60%;
+    height: 80%;
 }
