--- a/paradise-front/src/Components/Video/video.module.css
+++ b/paradise-front/src/Components/Video/video.module.css
@@ -6,10 +6,10 @@
 
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .video{
-
     width: 60%;
     height: 80%;
 }
