--- a/paradise-front/src/Components/VideoControlls/VideoName/videoName.module.css
+++ b/paradise-front/src/Components/VideoControlls/VideoName/videoName.module.css
@@ -1,4 +1,7 @@
 .name{
-    font-size: 2em;
+    display: block;
+    width: 100%;
+    height: 50%;
+    font-size: 1.5em;
     font-weight: bold;
 }
