--- a/paradise-front/src/Components/VideoControlls/videoControlls.module.css
+++ b/paradise-front/src/Components/VideoControlls/videoControlls.module.css
@@ -6,4 +6,16 @@
     height: 15%;
     border: 1px solid red;
     display: flex;
+    flex-wrap: wrap;
+}
+
+.box_elements{
+    width: 100%;
+    height: 50%;
+    background-color: aqua;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: center;
 }
