--- a/paradise-front/src/Components/VideoControlls/videoControlls.module.css
+++ b/paradise-front/src/Components/VideoControlls/videoControlls.module.css
@@ -10,12 +10,16 @@
 }
 
 .box_elements{
+    position: relative;
     width: 100%;
     height: 50%;
     background-color: aqua;
 
     display: flex;
     flex-wrap: wrap;
+    column-gap: 5%;
+    justify-content: flex-start;
     flex-direction: row;
     align-content: center;
+    align-items: center;
 }
