--- a/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
+++ b/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
@@ -1,4 +1,5 @@
 .box{
+    position: relative;
     width: 90%;
     height: 30%;
     background: linear-gradient(90.96deg, #00DFA2 0.13%, rgba(0, 223, 162, 0) 80.37%), #F5F5DC;
@@ -12,4 +13,26 @@
     height: 3.5em;
     border-radius: 100%;
     object-fit: cover;
+    border: 2px solid #1A1A1A;
+}
+
+.date{
+    font-weight: bold;
+    right: 10px;
+    position: absolute;
+    font-size: 1em;
+}
+
+.name{
+    font-weight: bold;
+    position: absolute;
+    width: 70%;
+    font-size: 1.5em;
+}
+
+.content{
+    position: relative;
+    width: 100%;
+    height: 90%;
+    font-size: 1.8em;
 }
