create widnow for add video

--- a/paradise-front/src/Components/ListComments/CommentForm/commentForm.module.css
+++ b/paradise-front/src/Components/ListComments/CommentForm/commentForm.module.css
@@ -18,9 +18,10 @@
     font-family: 'Caveat', cursive;
     font-size: 1.5em;
     box-sizing: border-box;
-    background: linear-gradient(90.96deg, #00DFA2 0.13%, rgba(0, 223, 162, 0) 80.37%), #F5F5DC;
+    resize: none;
+    background: #F5F5DC;
     border: 2px solid #1A1A1A;
-    border-radius: 15px 0px;
+    border-radius: 10px;
 }
 
 .counter{
