add contetn file for ModalVIdeo

--- a/paradise-front/src/Components/ModalWindow/ModalVideo/modalVideo.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalVideo/modalVideo.module.css
@@ -15,5 +15,9 @@
     background: #F5F5DC;
     border: 4px solid #00DFA2;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
