--- a/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/ContentText/contentText.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/ContentText/contentText.module.css
@@ -6,7 +6,7 @@
 .box_name{
     position: relative;
     width: 100%;
-    height: 40%;
+    height: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,8 +23,8 @@
     resize: none;
     line-height: 90%;
     height: 50%;
-    border: none;
-    padding-left: 2%;
+    border: 2px solid #1A1A1A;
+    padding: 2%;
     border-radius: 10px;
     outline-style: none;
     font-size: 1.5em;
@@ -42,7 +42,7 @@
 .box_discr{
     position: relative;
     width: 100%;
-    height: 60%;
+    height: 55%;
     display: flex;
     flex-direction: column;
     justify-content: center;
