--- a/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/modalVideoContent.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/modalVideoContent.module.css
@@ -1,8 +1,7 @@
 .box{
     width: 100%;
     height: 80%;
-    background-color: gray;
-
+    margin-bottom: 1%;
     display: flex;
     flex-direction: row;
 }
