--- a/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/ContentFile/contentFile.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalVideo/ModalVideoContent/ContentFile/contentFile.module.css
@@ -12,7 +12,16 @@
     align-items: center;
 }
 
-.article{
+.article_video{
+    margin-top: 10%;
+    font-size: 2em;
+    width: 100%;
+    text-align: left;
+    padding-left: 20%;
+}
+
+.article_poster{
+    margin-top: 3%;
     font-size: 2em;
     width: 100%;
     text-align: left;
@@ -22,8 +31,8 @@
 .video{
     margin-bottom: 2%;
     width: 75%;
-    height: 60%;
-    background-color: #5A0505;
+    height: 65%;
+    background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.1) 27.88%, rgba(0, 0, 0, 0.1) 68.1%);
     border-radius: 10px;
     border: 1px solid #1A1A1A;
 }
@@ -32,7 +41,7 @@
     margin-bottom: 2%;
     width: 75%;
     object-fit: cover;
-    background-color: #5A0505;
+    background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.1) 27.88%, rgba(0, 0, 0, 0.1) 68.1%);
     height: 60%;
     border-radius: 10px;
     border: 1px solid #1A1A1A;
