--- a/paradise-front/src/Components/ModalWindow/ModalVideo/ModalControl/ControlPanel/controlPanel.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalVideo/ModalControl/ControlPanel/controlPanel.module.css
@@ -1,7 +1,7 @@
 .control{
     width: 100%;
     height: 10%;
-    border-radius: 5px;
+    border-radius: 5px 5px 0px 0px;
     background: #1a1a1a;
 }
 
@@ -9,13 +9,22 @@
     width: 5%;
     height: 100%;
     float: right;
+    margin-right: 5px;
     background: #1a1a1a;
     border: 0;
     font-size: 2em;
     color: white;
     cursor: pointer;
+
 }
 
 .btn_close:hover{
     color: #00DFA2;
+}
+
+.article{
+    line-height: 200%;
+    font-size: 2em;
+    color: white;
+    padding-left: 3%;
 }
