--- a/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
+++ b/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 23%;
     min-width: 200px;
+    margin-right: 15px;
     height: auto;
     border-radius: 10px;
     background-color: #1a1a1a26;
