--- a/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
+++ b/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
@@ -5,7 +5,7 @@
     margin-right: 15px;
     height: auto;
     border-radius: 10px;
-    background-color: #1a1a1a26;
+    background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.1) 27.88%, rgba(0, 0, 0, 0.1) 68.1%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
 }
 
 .box:hover{
-    background-color: #1a1a1a47;
+    background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.2) 27.88%, rgba(0, 0, 0, 0.2) 68.1%);
 }
 
 .video{
