decompositon update tokens

--- a/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
+++ b/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 90%;
     height: 30%;
-    background: linear-gradient(90.96deg, #00DFA2 0.13%, rgba(0, 223, 162, 0) 80.37%), #F5F5DC;
+    background: linear-gradient(180deg, rgba(0, 223, 162, 0.34) 5.46%, rgba(0, 223, 162, 0) 23.64%), #F5F5DC;
     border: 2px solid #1A1A1A;
     border-radius: 15px 0px;
 }
