--- a/paradise-front/src/Components/ListVideo/listVideo.css
+++ b/paradise-front/src/Components/ListVideo/listVideo.css
@@ -1,10 +1,9 @@
 .list-video{
     position: relative;
-    padding-top: 7%;
+    padding-top: 10vh;
     padding-bottom: 5%;
     padding-left: 2%;
     padding-right: 2%;
-    padding-bottom: 5%;
     width: 96%;
     height: auto;
     display: flex;
