--- a/paradise-front/src/Components/VideoControlls/VideoName/videoName.module.css
+++ b/paradise-front/src/Components/VideoControlls/VideoName/videoName.module.css
@@ -1,7 +1,8 @@
 .name{
     display: block;
     width: 100%;
-    height: 50%;
+    height: auto;
+    padding-bottom: 15px;
     font-size: 1.5em;
     font-weight: bold;
 }
