--- a/paradise-front/src/Components/FavoriteList/favoriteList.module.css
+++ b/paradise-front/src/Components/FavoriteList/favoriteList.module.css
@@ -1,8 +1,8 @@
 .box{
-    width: 100vw;
-    padding-top: 10vh;
+    padding-top: 5vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 25px;
+    padding-bottom: 10px;
 }
