--- a/paradise-front/src/Components/PageName/pageName.module.css
+++ b/paradise-front/src/Components/PageName/pageName.module.css
@@ -2,7 +2,41 @@
     width: 100%;
     height: auto;
     display: block;
-    font-size: 3.5em;
+    font-size: 2.5em;
+    padding-bottom: 5px;
     padding-top: 10vh;
+    color: white;
     text-align: center;
+
+    background: #1A1A1A;
+    border-bottom: 2px solid #00DFA2;
+    box-shadow: 0px 4px 4px rgba(0, 223, 162, 0.5);
+    border-radius: 0px 0px 15px 15px;
+
+    transform-origin: 50% 50%;
+
+    animation: spawn 0.3s linear;
+    animation-fill-mode: forwards;
+}
+
+@keyframes spawn {
+    0%{
+        transform:translate(0,-100%);
+    }
+
+    25%{
+        transform:translate(0,-80%);
+    }
+
+    50%{
+        transform:translate(0,-50%);
+    }
+
+    75%{
+        transform:translate(0,-30%);
+    }
+
+    100%{
+        transform:translate(0,0);
+    }
 }
