--- a/paradise-front/src/Components/NavigationPanel/Profile/profile.css
+++ b/paradise-front/src/Components/NavigationPanel/Profile/profile.css
@@ -10,6 +10,7 @@
     border: 2px solid  #00DFA2;
     cursor: pointer;
     border-radius: 50%;
-    max-width: 100%;
-    max-height: 100%;
+    object-fit: cover;
+    width: 50px;
+    height: 50px;
 }
