--- a/paradise-front/src/Components/ModalWindow/ModalInfoWindow/modal.module.css
+++ b/paradise-front/src/Components/ModalWindow/ModalInfoWindow/modal.module.css
@@ -12,10 +12,12 @@
 
 .window{
     position: absolute;
+    min-width: 450px;
     width: 50vw;
     height: 50vh;
     background-color: white;
     border: 2px solid rgba(0, 223, 162);
+    box-shadow: 0px 0px 20px rgba(0, 223, 162, 0.5);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -28,6 +30,7 @@
 }
 
 .article{
+    display: block;
     font-size: 4em;
     margin-top: 0;
     margin-bottom: 0;
