--- a/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
+++ b/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
@@ -2,13 +2,15 @@
     width: 100%;
     height: 60px;
     margin: 10px;
-    background: #000000;
     border: 1px solid #00DFA2;
     border-radius: 10px;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    background: #1A1A1A;
+    box-shadow: 0px 0px 5px 0.5px rgba(0, 223, 162, 0.5);
 }
 
 .button-image{
@@ -25,5 +27,11 @@
 }
 
 .modal-button:hover .button-name {
-    text-shadow: 0px 0px 10px #00DFA2;
+    color: #00DFA2;
+}
+
+.modal-button:hover{
+    background: rgb(255, 255, 255,0.05);
+    transform: scale(1.05,1.05);
+    box-shadow: 0px 0px 5px 0.5px rgba(0, 223, 162, 0.5);
 }
