--- a/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
+++ b/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
@@ -2,14 +2,28 @@
     position: relative;
     width: 90%;
     height: 30%;
-    background: linear-gradient(180deg, rgba(0, 223, 162, 0.34) 5.46%, rgba(0, 223, 162, 0) 23.64%), #F5F5DC;
-    border: 2px solid #1A1A1A;
     border-radius: 15px 0px;
+    display: flex;
+}
+
+.box_content{
+    box-sizing: border-box;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow:0px 0px 0px 2px #1A1A1A;
+}
+
+.box_user{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #1A1A1A;
+    border-radius: 8px 8px 0px 0px;
 }
 
 .avatar{
     cursor: pointer;
-    margin: 10px;
+    margin-right: 10px;
     width: 3.5em;
     height: 3.5em;
     border-radius: 100%;
@@ -18,22 +32,24 @@
 }
 
 .date{
-    font-weight: bold;
-    right: 10px;
-    position: absolute;
-    font-size: 1em;
+    padding-left: 10px;
+    color: #00DFA2;
+    font-size: 1.3em;
+    padding-bottom: 10px;
 }
 
 .name{
+    padding-left: 10px;
+    color: #00DFA2;
     font-weight: bold;
-    position: absolute;
-    width: 70%;
-    font-size: 1.5em;
+    width: 100%;
+    font-size: 1.8em;
 }
 
 .content{
     position: relative;
-    width: 100%;
-    height: 90%;
-    font-size: 1.8em;
+    display: block;
+    padding: 10px;
+    font-size: 2em;
+    word-break: break-all;
 }
