--- a/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
+++ b/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
@@ -15,6 +15,10 @@
     background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.2) 27.88%, rgba(0, 0, 0, 0.2) 68.1%);
 }
 
+.box:hover .video{
+    border: 2px solid rgba(0, 223, 162);
+}   
+
 .video{
     margin-top: 5px;
     width: 95%;
@@ -22,7 +26,8 @@
     min-height: 160px;
     border-radius: 10px;
     object-fit: cover;
-    border: 2px solid #00DFA2;
+    border: 2px solid #1A1A1A;
+    box-sizing: border-box;
     background-color: transparent;
 }
 
@@ -46,7 +51,7 @@
 
 
 .profile{
-    border: 2px solid #00DFA2;
+    border: 2px solid #1A1A1A;
     width: 30px;
     height: 30px;
     object-fit:cover;
