--- a/paradise-front/src/Components/LoaderFile/loaderFile.module.css
+++ b/paradise-front/src/Components/LoaderFile/loaderFile.module.css
@@ -10,14 +10,15 @@
 
 .card{
     position: relative;
-    width: 45vw;
-    height: 60vh;
+    width: 40vw;
+    height: 55vh;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(26, 26, 26, 0.4);
 
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+    align-items: center;
 } 
 
 .title{
@@ -25,4 +26,146 @@
     font-size: 4em;
     padding-top: 20px;
     margin-top: 20px;
+}
+
+.content{
+    text-align: center;
+    font-size: 2.5em;
+}
+
+.loader{
+    position: relative;
+    width:80%;
+    height: 40%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.loader::before{
+    position: absolute;
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #1A1A1A;
+    border-radius: 3px;
+
+}
+
+.spin{
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    border: 5px solid #1A1A1A;
+    transform: rotate(45deg);
+    animation: spin 3s linear infinite;
+}
+
+.bonus::after,
+.bonus::before{
+    content: "";
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 30%;
+    transform: rotate(45deg);
+    border-radius: 10px;
+    border-style: solid;
+    border-color: #1A1A1A;
+}
+
+.bonus::after{
+    border-width: 0px 0px 4px 4px;
+    animation: left  2.25s linear infinite;
+    left: 25%;
+}
+
+.bonus::before{
+    border-width: 4px 4px 0px 0px;
+    right: 25%;
+    animation: right 2.25s linear infinite;
+}
+
+@keyframes left {
+    0% {
+        left: 25%;
+    }
+
+    50%{
+        left: 35%
+    }
+
+    100%{
+        left: 25%;
+    }
+}
+
+@keyframes right {
+    0% {
+        right: 25%;
+    }
+
+    50%{
+        right: 35%
+    }
+
+    100%{
+        right: 25%;
+    }
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+      }
+    6%{
+        transform: rotate(0deg);
+      }
+    12% {
+      transform: rotate(45deg);
+    }
+    18% {
+      transform: rotate(45deg);
+    }
+    24% {
+      transform: rotate(90deg);
+    }
+    30% {
+      transform: rotate(90deg);
+    }
+    36% {
+      transform: rotate(135deg);
+    }
+    42% {
+      transform: rotate(135deg);
+    }
+    48% {
+      transform: rotate(180deg);
+    }
+    52% {
+      transform: rotate(180deg);
+    }
+    58%{
+      transform: rotate(225deg);
+    }
+    64%{
+      transform: rotate(225deg);
+    }
+    70%{
+        transform: rotate(270deg);
+      }
+      76%{
+        transform: rotate(270deg);
+      }
+      82%{
+        transform: rotate(315deg);
+      }
+      88%{
+        transform: rotate(315deg);
+      }
+    100% {
+      transform: rotate(360deg);
+    }
 }
