--- a/paradise-front/src/Components/Video/video.module.css
+++ b/paradise-front/src/Components/Video/video.module.css
@@ -10,7 +10,7 @@
 }
 
 .video{
-    background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.1) 27.88%, rgba(0, 0, 0, 0.1) 68.1%);
+   /* background: linear-gradient(135.38deg, rgba(0, 223, 162, 0.1) 27.88%, rgba(0, 0, 0, 0.1) 68.1%);*/
     width: 65%;
     height: 80%;
     border-radius: 10px;
