--- a/paradise-front/src/Components/AuthWindow/AuthInput/authInput.module.css
+++ b/paradise-front/src/Components/AuthWindow/AuthInput/authInput.module.css
@@ -18,7 +18,7 @@
     width: 100%;
     box-sizing: border-box;
     line-height: 100%;
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--border-color);
     border-radius: 10px;
     padding-left: 2%;
     outline-style: none;
