--- a/paradise-front/src/Components/AuthWindow/authWindow.module.css
+++ b/paradise-front/src/Components/AuthWindow/authWindow.module.css
@@ -28,8 +28,8 @@
     overflow: hidden;
     position: absolute;
     top: 15%;
-    background: #1A1A1A;
-    border: 1px solid #1A1A1A;
+    background: var(--main-bg-color);
+    border: 1px solid var(--main-bg-color);
     border-radius: 10px;
     width: 30%;
     height: 75vh
