--- a/paradise-front/src/Components/Canal/ProfileAvatar/canalAvatar.module.css
+++ b/paradise-front/src/Components/Canal/ProfileAvatar/canalAvatar.module.css
@@ -3,7 +3,7 @@
     height: 200px;
     z-index: 1;
     position: absolute;
-    border: 2px solid #00DFA2;
+    border: 2px solid var(--border-bt-color);
     border-radius: 100%;
     bottom: -7vh;
     object-fit: cover;
