--- a/paradise-front/src/Components/Canal/ProfileInfo/profileInfo.module.css
+++ b/paradise-front/src/Components/Canal/ProfileInfo/profileInfo.module.css
@@ -1,10 +1,10 @@
 .block{
     position: absolute;
     bottom: 0;
-    background: #1A1A1A;
+    background: var(--main-bg-color);
     border-width: 2px 0px;
     border-style: solid;
-    border-color: #00DFA2;
+    border-color: var(--border-bt-color);
     width: 100%;
     height: 7vh;
     display: flex;
