--- a/paradise-front/src/Components/ListComments/CommentForm/CommentSend/commentSend.module.css
+++ b/paradise-front/src/Components/ListComments/CommentForm/CommentSend/commentSend.module.css
@@ -12,8 +12,8 @@
     transition: all 0.3s ease;
     font-family: 'Caveat', cursive;
     cursor: pointer;
-    background: #1A1A1A;
-    border: 1px solid #00DFA2; 
+    background: var(--main-bg-color);
+    border: 1px solid var(--border-bt-color);
     color: white;
 }
 
