--- a/paradise-front/src/Components/ListComments/CommentForm/commentForm.module.css
+++ b/paradise-front/src/Components/ListComments/CommentForm/commentForm.module.css
@@ -19,7 +19,7 @@
     font-size: 1.5em;
     box-sizing: border-box;
     resize: none;
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--border-color);
     border-radius: 10px;
 }
 
