--- a/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
+++ b/paradise-front/src/Components/ListComments/CommentItem/commentIte.module.css
@@ -17,7 +17,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    background: #1A1A1A;
+    background: var(--main-bg-color);
     border-radius: 8px 8px 0px 0px;
 }
 
@@ -28,7 +28,7 @@
     height: 3.5em;
     border-radius: 100%;
     object-fit: cover;
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--border-color);
 }
 
 .date{
