--- a/paradise-front/src/Components/ListSubscib/SubscibItem/subscribItem.module.css
+++ b/paradise-front/src/Components/ListSubscib/SubscibItem/subscribItem.module.css
@@ -13,7 +13,7 @@
 
 .profile:hover{
     box-sizing:border-box;
-    border: 2px solid #00DFA2;
+    border: 2px solid var(--border-bt-color);
 }
 
 .avatar{
@@ -23,7 +23,7 @@
     min-height: 160px;
     border-radius: 100%;
     object-fit: cover;
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--border-color);
     background-color: transparent;
 }
 
