--- a/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
+++ b/paradise-front/src/Components/ListVideo/VideoItem/videoItem.module.css
@@ -53,7 +53,7 @@
 
 
 .profile{
-    border: 2px solid #1A1A1A;
+    border: 2px solid var(--border-color);
     width: 30px;
     height: 30px;
     object-fit:cover;
