--- a/paradise-front/src/Components/LoaderFile/loaderFile.module.css
+++ b/paradise-front/src/Components/LoaderFile/loaderFile.module.css
@@ -49,7 +49,7 @@
     content: "";
     width: 10px;
     height: 10px;
-    background: #1A1A1A;
+    background: var(--main-bg-color);
     border-radius: 3px;
 
 }
@@ -58,7 +58,7 @@
     width: 80px;
     height: 80px;
     border-radius: 10px;
-    border: 5px solid #1A1A1A;
+    border: 5px solid var(--border-color);
     transform: rotate(45deg);
     animation: spin 3s linear infinite;
 }
@@ -73,7 +73,7 @@
     transform: rotate(45deg);
     border-radius: 10px;
     border-style: solid;
-    border-color: #1A1A1A;
+    border-color: var(--border-color);
 }
 
 .bonus::after{
