--- a/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
+++ b/paradise-front/src/Components/ModalWindow/ModalButton/modalButtom.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
 
-    background: #1A1A1A;
+    background: var(--main-bg-color);
 }
 
 .button-image{
