--- a/paradise-front/src/Components/NavigationPanel/MainButton/mainButton.css
+++ b/paradise-front/src/Components/NavigationPanel/MainButton/mainButton.css
@@ -1,7 +1,7 @@
 .main-button{
     width: 180px;
     height: 70%;
-    border-bottom: 2px solid #00DFA2;
+    border-bottom: 2px solid var(--border-bt-color);
     border-radius: 10px;
     box-sizing: border-box;
 
