--- a/paradise-front/src/Components/ProfileVideoList/ProfileVideoItem/profileVideoItem.module.css
+++ b/paradise-front/src/Components/ProfileVideoList/ProfileVideoItem/profileVideoItem.module.css
@@ -40,7 +40,7 @@
     font-family: 'Caveat', cursive;
     color: white;
     background: #CA0000;
-    border: 1px solid #00DFA2;
+    border: 1px solid var(--border-bt-color);
     border-radius: 10px;
 
     cursor: pointer;
