--- a/paradise-front/src/index.css
+++ b/paradise-front/src/index.css
@@ -1,3 +1,11 @@
+:root{
+  --main-bg-color: #1A1A1A;
+  --second-bg-color: #00DFA2;
+  --border-color: #1A1A1A;
+  --main-bt-color: #1A1A1A;
+  --border-bt-color: #00DFA2;
+}
+
 body {
   width: 100%;
   height: 100%;
